# SignBridge

./: .gitignore  main.py  pyproject.toml
Scripts/: build_dataset.py  frames.py  landmarks.py
